# SDLWindows

./: CMakeLists.txt  README.md  readme_install.txt
scripts/: Entity.cpp  Entity.hpp  Math.cpp  Math.h  RenderWindow.cpp  RenderWindow.hpp  main.cpp  main1.cpp  utils.hpp
